# traceops-evidence-demo

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  agent_contract.py  claim_policy.py  demo_api_data.py  evidence_loader.py  main.py  report_writer.py  requirement_mapper.py  schemas.py
data/demo_evidence/: firmware_log_review_notes.md  python_automation_notes.md  sample_python_tooling_notes.md  sample_role_description.md  sample_validation_notes.md  unsupported_claim_examples.md  validation_station_notes.md
docs/: ARCHITECTURE.md  LIMITATIONS.md  PUBLIC_RELEASE_CHECKLIST.md  USAGE.md  agent_integration_contract.md  api_contract.md
docs/examples/: claim_decision_table.md  demo_report_example.md
docs/frontend_contract/: API_CONTRACT_FROM_UI.md  FRONTEND_BACKEND_WIRING_PLAN.md
scripts/: check_public_safety.py  run_demo.py  smoke_api.py
tests/: test_agent_contract.py  test_api_contract.py  test_claim_policy.py  test_evidence_loader.py  test_public_safety.py  test_report_writer.py  test_requirement_mapper.py  test_run_demo.py
