[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceops-evidence-demo"
version = "0.1.0"
description = "Public-safe evidence-to-requirement review demo."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "docs*", "outputs*", "scripts*", "tests*"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"
